--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -25,8 +25,9 @@ head(cleandata)
 ```
 Process data for plotting
 ```{r, echo = TRUE}
+library(ggplot2)
 library(dplyr)
-steps = cleandata %>%
+steps <- cleandata %>%
   filter(!is.na(steps)) %>%
   group_by(date) %>%
   summarize(steps = sum(steps)) %>%
@@ -35,10 +36,82 @@ steps = cleandata %>%
 ```
 Plot histogram - frequency of steps per day
 ```{r, echo = TRUE}
-library(ggplot2)
 ggplot(steps, aes(x = steps)) +
   geom_histogram(fill = "green", binwidth = 1000) +
-  labs(title = "Histogram of Steps per day", x = "Steps per day", y = "Frequency")
+  labs(title = "Plot of Steps Per Day", x = "Steps per day", y = "Frequency")
 ```
 
 ##What is mean total number of steps taken per day?
+
+```{r, echo = TRUE}
+stepmu = mean(steps$steps, na.rm = TRUE)
+stepmed = median(steps$steps, na.rm = TRUE)
+stepmu  ##step mean
+stepmed  ##step median
+```
+
+<b>Mean steps == 10766.19 and median steps == 10765.</b>
+
+##What is the average daily activity pattern?
+
+```{r, echo = TRUE}
+interval = data %>%
+  filter(!is.na(steps)) %>%
+  group_by(interval) %>%
+  summarize(steps = mean(steps))
+```
+
+Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+```{r, echo = TRUE}
+ggplot(interval, aes(x=interval, y=steps)) +
+  geom_line(color = "blue")
+```
+
+Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+```{r, echo = TRUE}
+interval[which.max(interval$steps),]
+```
+
+<b>Interval 835 has the greatest number of steps with 206.17</b>
+
+##Imputing missing values
+
+Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+```{r, echo = TRUE}
+sum(is.na(data$steps))
+```
+
+Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+```{r, echo = TRUE}
+datacomplete <- data
+nas = is.na(datacomplete$steps)
+avgint  = tapply(datacomplete$steps, datacomplete$interval, mean, na.rm=TRUE, simplify=TRUE)
+datacomplete$steps[nas] <- avgint[as.character(datacomplete$interval[nas])]
+sum(is.na(datacomplete$steps))
+```
+
+<b>There is no more missing data.</b>
+
+Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+```{r, echo = TRUE}
+stepscomplete = datacomplete %>%
+  filter(!is.na(steps)) %>%
+  group_by(date) %>%
+  summarize(steps = sum(steps)) %>%
+  print
+ggplot(stepscomplete, aes(x = steps)) +
+  geom_histogram(fill = "purple", binwidth = 1000) +
+  labs(title = "Plot of Steps Per Day Including Missing Values", x = "Steps per day", y = "Frequency")
+```
+
+Calculated mean and median with missing values.
+```{r,echo = TRUE}
+allstepsmu = mean(stepscomplete$steps, na.rm = TRUE)
+allstepsmedian = median(stepscomplete$steps, na.rm = TRUE)
+allstepsmu
+allstepsmedian
+```
+
+<b>If we impute missing data, both mean and median are the same: 10766.19</b>
+
+##Are there differences in activity patterns between weekdays and weekends?
